# libonql

./: .gitignore  Doxyfile  INSTALL  Makefile.am  README  configure.ac  internal.c  internal.h  onql.h  onql.pc  result.c  result.h  safemem.c  safemem.h  sqlcondition.c  sqlcondition.h  sqlquery.c  sqlquery.h  sqlstatement.c  sqlstatement.h  sqon.c  sqon.h  sqon.pc
doc/: basic-tutorial.md  generating-api-documentation.md
